--- a/voyagesClientAngular/index.html
+++ b/voyagesClientAngular/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>AirBermudes</title>
 </head>
-<body ng-app="">
+<body ng-app="AirBermudes">
     <div>
         <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
