user controller and routes to login signup

--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -9,10 +9,11 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="users/users.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>AirBermudes!</title>
 </head>
-<body ng-app="AppBermudes">
+<body ng-app="AppAirBermudes">
     <div>
         <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
@@ -21,7 +22,6 @@
                     <ul class="nav navbar-nav">
                         <li><a href="#/login">Sign in</a></li>
                         <li><a href="#/signup">Sign up</a></li>
-                        <li> <a style="color:white"></a></li>
                     </ul>
                 </div>
             </div>
