--- a/ProjetAirBermudes/AirBermudesClientAngular/users/signUp.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/users/signUp.html
@@ -1,2 +1,21 @@
-﻿<title>SignUp</title>
-<div>stuff to sign up</div>
+﻿<ti<div class="container theme-showcase" role="main">
+    <div class="row" ng-controller="ClientController">
+        <div ng-show="showAlertSucess" class="alert alert-success" role="alert"><p>{{flashMessage}}</p></div>
+        <div ng-show="showAlertError" class="alert alert-danger" role="alert"><p>{{flashErrors}}</p></div>
+        <form>
+            <div class="form-group">
+                <label class="label label-primary" for="email">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Email" ng-model="formEmail">
+            </div>
+            <div class="form-group">
+                <label class="label label-primary" for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password" ng-model="formPassword">
+            </div>
+            <div class="form-group">
+                <label class="label label-primary" for="password_confirm">Password confirm</label>
+                <input type="password" class="form-control" id="password_confirm" placeholder="Password confirm" ng-model="formPassword_confirm">
+            </div>
+            <button type="submit" class="btn btn-default" ng-click="register()">Sign up</button>
+        </form>
+    </div>
+</div>
