Travels : Gestion Basique
On peut maintenant créer et voir les travels, par utilisateur. Jai aussi
mis un petit système de Sign In (DEBUG) qui vient de mon TP de memos. Ça
fonctionne, mais je ne sais pas si on va l'implémenter dans la version
finale.

--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -9,7 +9,8 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="users/users.js"></script>
+    <!--<script type="text/javascript" src="users/users.js"></script>-->
+    <script type="text/javascript" src="usersDebug/userDEBUG.js"></script>
     <script type="text/javascript" src="travels/travel.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>AirBermudes!</title>
