--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -13,6 +13,9 @@
     <script type="text/javascript" src="usersDebug/userDEBUG.js"></script>
     <script type="text/javascript" src="travels/travel.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="Content/datetimepicker.css" />
+    <script type="text/javascript" src="Scripts/moment.js"></script>
+    <script type="text/javascript" src="Scripts/datetimepicker.js"></script>
     <title>AirBermudes!</title>
 </head>
 <body ng-app="AppAirBermudes">
