--- a/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
@@ -6,7 +6,7 @@
         <div class="col-md-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h2 class="panel-title">Days</h2>
+                    <h2 class="panel-title">New day</h2>
                 </div>
                 <div class="panel-body">
                     <p>This will go in a modal dialog... later</p>
