Quelques fix et Importation du DateTimePicker

--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -8,7 +8,11 @@
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
-
+	<link rel="stylesheet" href="Content/datetimepicker.css" />
+    <script type="text/javascript" src="Scripts/moment.js"></script>
+    <script type="text/javascript" src="Scripts/datetimepicker.js"></script>
+	
+	
     <!-- Google map API -->
     <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
     <script src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
