--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -1,5 +1,5 @@
 ﻿<div class="container theme-showcase" role="main">
-    <div class="row" ng-controller="CourseController">
+    <div class="row">
         <div ng-show="showAlertSucess" class="alert alert-success" role="alert"><p>{{flashMessage}}</p></div>
         <div ng-show="showAlertError" class="alert alert-danger" role="alert"><p>{{flashErrors}}</p></div>
         <div class="row">
@@ -7,10 +7,15 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Courses</div>
                     <div class="panel-body">
-                        <form ng-submit="addCourse()" class="form-group">
-                            <label for="Depart">Depart</label><input type="text" name="destination" class="form-control" />
-                            <label for="Destination">Destination</label><input type="text" name="destination" class="form-control" />
-                            <label for="Destination"></label><input type="text" name="destination" class="form-control" />
+                        <form ng-submit="addCourse(Startate,DepartureAdress,DestinationAddress,EndDate)" class="form-group">
+                            <label for="Startate">Startate</label>
+                            <input type="text" name="Depart" class="form-control" ng-model="Startate" />
+                            <label for="DepartureAdress">Destination address</label>
+                            <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAdress" />
+                            <label for="DestinationAddress">Arrival address</label>
+                            <input type="text" name="DestinationAddress" class="form-control" ng-model="DestinationAddress" />
+                            <label for="EndDate">EndDate</label>
+                            <input type="text" name="EndDate" class="form-control" ng-model="EndDate" />
                             <br />
                             <input type="submit" class="btn btn-default" value="Add course" />
                         </form>
