--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="account/account.js"></script>
     <script type="text/javascript" src="travels/travel.js"></script>
+    <script type="text/javascript" src="travels/edit.js"></script>
     <script type="text/javascript" src="courses/courses.js"></script>
     <script type="text/javascript" src="days/days.js"></script>
     <script type="text/javascript" src="places/places.js"></script>
