--- a/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
@@ -17,6 +17,7 @@
         <div class="navbar-collapse collapse" id="nav-collapse-section">
             <ul class="nav navbar-nav">
                 <li><a href="#/testplaces">Test places</a></li>
+                <li><a href="#/courses">Courses</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="isAuthenticated()"><p class="navbar-text">{{getCurrentUserName()}}</p></li>
