--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -7,15 +7,20 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Courses</div>
                     <div class="panel-body">
-                        <form ng-submit="addCourse(Startate,DepartureAdress,DestinationAddress,EndDate)" class="form-group">
+                        <form ng-submit="addCourse(Startate,DepartureAddress,DestinationAddress,EndDate)" class="form-group">
+
                             <label for="Startate">Startate</label>
                             <input type="text" name="Depart" class="form-control" ng-model="Startate" />
-                            <label for="DepartureAdress">Destination address</label>
-                            <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAdress" />
-                            <label for="DestinationAddress">Arrival address</label>
+
+                            <label for="DepartureAdress">Departure address</label>
+                            <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAddress" />
+
+                            <label for="DestinationAddress">Destination address</label>
                             <input type="text" name="DestinationAddress" class="form-control" ng-model="DestinationAddress" />
+
                             <label for="EndDate">EndDate</label>
                             <input type="text" name="EndDate" class="form-control" ng-model="EndDate" />
+
                             <br />
                             <input type="submit" class="btn btn-default" value="Add course" />
                         </form>
