Courses DTO, et debut de transport

--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/courses.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/courses.html
@@ -13,7 +13,7 @@
             </div>
                 <!-- Table -->
                 <h3 class="text-center">All your courses for this travel</h3>
-                <table class="table">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -22,6 +22,8 @@
                             <th>Arrival point</th>
                             <th>Arrival date</th>
                             <th>Transport method</th>
+                            <th>Transport Company</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -32,6 +34,8 @@
                             <td>{{course.DestinationAddress}}</td>
                             <td>{{course.EndDate}}</td>
                             <td>{{course.TransportName}}</td>
+                            <td>{{course.TransportCompanyName}}</td>
+                            <td><a href="javascript:void(0)" ng-click="editCourse(course.Id,course)">Edit</a>|<a href="javascript:void(0)" ng-click="deleteCourse(course.Id)">Delete</a></td>
                         </tr>
                     </tbody>
                 </table>
