--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -7,7 +7,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Courses</div>
                     <div class="panel-body">
-                        <form ng-submit="addCourse(Startate,DepartureAddress,DestinationAddress,EndDate)" class="form-group">
+                        <form ng-submit="addCourse(Startate,DepartureAddress,DestinationAddress,EndDate,TransportCompanyName)" class="form-group">
 
                             <label for="Startate">Startate</label>
                             <input type="text" name="Depart" class="form-control" ng-model="Startate" />
@@ -21,6 +21,17 @@
                             <label for="EndDate">EndDate</label>
                             <input type="text" name="EndDate" class="form-control" ng-model="EndDate" />
 
+                            <label for="TransportCompanyName">TransportCompanyName</label>
+                            <input type="text" name="TransportCompanyName" class="form-control" ng-model="TransportCompanyName" />
+
+                            <div class="form-group">
+                                <label for="TransportType">Choose transport type :</label>
+                                <select class="form-control" name="mySelect" id="mySelect"
+                                        ng-options="option.name for option in selecListChoices.availableOptions track by option.id"
+                                        ng-model="selecListChoices.selectedOption"></select>
+                            </div>
+                            <tt>option = {{selecListChoices.selectedOption}}</tt><br />
+                            
                             <br />
                             <input type="submit" class="btn btn-default" value="Add course" />
                         </form>
