--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -7,10 +7,10 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Courses</div>
                     <div class="panel-body">
-                        <form ng-submit="addCourse(Startate,DepartureAddress,DestinationAddress,EndDate,TransportCompanyName)" class="form-group">
+                        <form ng-submit="addCourse(StartDate,DepartureAddress,DestinationAddress,EndDate,TransportCompanyName,selecListChoices.selectedOption.TransportName)" class="form-group">
 
-                            <label for="Startate">Startate</label>
-                            <input type="text" name="Depart" class="form-control" ng-model="Startate" />
+                            <label for="StartDate">StartDate</label>
+                            <input type="text" name="StartDate" class="form-control" ng-model="StartDate" />
 
                             <label for="DepartureAdress">Departure address</label>
                             <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAddress" />
@@ -27,10 +27,11 @@
                             <div class="form-group">
                                 <label for="TransportType">Choose transport type :</label>
                                 <select class="form-control" name="mySelect" id="mySelect"
-                                        ng-options="option.name for option in selecListChoices.availableOptions track by option.id"
+                                        ng-options="option.TransportName for option in selecListChoices.availableOptions track by option.TransportID"
                                         ng-model="selecListChoices.selectedOption"></select>
                             </div>
                             <tt>option = {{selecListChoices.selectedOption}}</tt><br />
+                            <tt>TransportName = {{selecListChoices.selectedOption.TransportName}}</tt><br />
                             
                             <br />
                             <input type="submit" class="btn btn-default" value="Add course" />
