--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -1,13 +1,22 @@
 ﻿<div class="container theme-showcase" role="main">
     <div class="row">
-        <div ng-show="showAlertSucess" class="alert alert-success" role="alert"><p>{{flashMessage}}</p></div>
-        <div ng-show="showAlertError" class="alert alert-danger" role="alert"><p>{{flashErrors}}</p></div>
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Courses</div>
-                    <div class="panel-body">
-                        <form ng-submit="addCourse(StartDate,DepartureAddress,DestinationAddress,EndDate,TransportCompanyName,selecListChoices.selectedOption.TransportName)" class="form-group">
+        <div ng-show="showAlertSucess" class="alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <p>{{flashMessage}}</p>
+        </div>
+        <div ng-show="showAlertError" class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <p>{{flashErrors}}</p>
+        </div>
+     </div>
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="panel panel-default">
+                <div class="panel-heading">Courses</div>
+                <div class="panel-body">
+                    <form ng-submit="addCourse(selecListChoices.selectedOption.TransportName)" class="form-group">
+
+                        <div ng-class="{'has-error' : hasErrors}">
 
                             <label for="StartDate">StartDate</label>
                             <input type="text" name="StartDate" class="form-control" ng-model="StartDate" />
@@ -30,13 +39,15 @@
                                         ng-options="option.TransportName for option in selecListChoices.availableOptions track by option.TransportID"
                                         ng-model="selecListChoices.selectedOption"></select>
                             </div>
-                            <tt>option = {{selecListChoices.selectedOption}}</tt><br />
-                            <tt>TransportName = {{selecListChoices.selectedOption.TransportName}}</tt><br />
+                            <!--<tt>option = {{selecListChoices.selectedOption}}</tt><br />
+                            <tt>TransportName = {{selecListChoices.selectedOption.TransportName}}</tt><br />-->
+
+                            <span ng-show="hasErrors" class="help-block" ng-repeat="message in errorMessages">{{message}}</span>
+                        </div>
                             
-                            <br />
-                            <input type="submit" class="btn btn-default" value="Add course" />
-                        </form>
-                    </div>
+                        <br />
+                        <input type="submit" class="btn btn-default" value="Add course" />
+                    </form>
                 </div>
             </div>
         </div>
