Added seed for basic transport types

--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/courses.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/courses.html
@@ -42,7 +42,7 @@
                         <td>{{course.EndDate}}</td>
                         <td>{{course.TransportName}}</td>
                         <td>{{course.TransportCompanyName}}</td>
-                        <td><a href="javascript:void(0)" ng-click="editCourse(course.Id,course)">Edit</a>|<a href="javascript:void(0)" ng-click="deleteCourse(course.Id)">Delete</a></td>
+                        <td><a href="#/editCourse">Edit</a>|<a href="javascript:void(0)" ng-click="deleteCourse(course.Id)">Delete</a></td>
                     </tr>
                 </tbody>
             </table>
