--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/editCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/editCourse.html
@@ -1,4 +1,4 @@
-﻿<div class="container theme-showcase" role="main">
+<div class="container theme-showcase" role="main">
     <div class="row">
         <div ng-show="showAlertSucess" class="alert alert-success alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -12,14 +12,14 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <div class="panel panel-default">
-                <div class="panel-heading">Create new Course from this trip</div>
+                <div class="panel-heading">Edit this course</div>
                 <div class="panel-body">
-                    <form ng-submit="addCourse(selecListChoices.selectedOption.TransportName)" class="form-group">
+                    <form ng-submit="editCourse(selecListChoices.selectedOption.TransportName)" class="form-group">
 
                         <div ng-class="{'has-error' : hasErrors}">
 
                             <label for="StartDate">StartDate</label>
-                            <input type="text" name="StartDate" class="form-control" ng-model="StartDate" />
+                            <input type="text" name="StartDate" class="form-control" ng-model="StartDate" value="{{StartDate}}"/>
 
                             <label for="DepartureAdress">Departure address</label>
                             <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAddress" />
@@ -32,6 +32,8 @@
 
                             <label for="TransportCompanyName">TransportCompanyName</label>
                             <input type="text" name="TransportCompanyName" class="form-control" ng-model="TransportCompanyName" />
+
+                            <input type="hidden" name="CourseID" value="{{Course.Id}}">
 
                             <span ng-show="hasErrors" class="help-block" ng-repeat="message in errorMessages">{{message}}</span>
                         </div>
