--- a/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
@@ -2,36 +2,32 @@
     <div class="row">
         <div ng-show="showAlertSucess" class="alert alert-success" role="alert"><p>{{flashMessage}}</p></div>
         <div ng-show="showAlertError" class="alert alert-danger" role="alert"><p>{{flashErrors}}</p></div>
-        
-        <div class="col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h2 class="panel-title">New day</h2>
-                </div>
-                <div class="panel-body">
-                    <p>This will go in a modal dialog... later</p>
-                    <form>
-                        <div class="form-group">
-                            <label class="label label-primary" for="email">Date</label>
-                            <input type="date" class="form-control" id="date" ng-model="day.DayDate">
-                        </div>
-                        <div class="form-group">
-                            <label class="label label-primary" for="budget">Budget</label>
-                            <input type="number" class="form-control" id="budget" ng-model="day.Budget">
-                        </div>
-                        <button type="button" class="button button-default" ng-click="saveDay(day)">Save day</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-                
-        <div class="col-md-8">
-            <div id="list-days" class="list-group">
-                <button type="button" class="btn list-group-item" ng-repeat="day in dayList" ng-click="onClickDay(day)">
-                    {{day.DayDate}} Budget: {{day.Budget}}
-                </button>
-            </div>
-        </div>
 
+        <div class="col-md-12">
+            <!-- Table -->
+            <h3 class="text-center">All your days for this travel</h3>
+            <button class="btn btn-default" ng-click="onAddDay()">
+                Add day
+            </button>
+            {{dayList}}
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Date</th>
+                        <th>Budget</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="day in days">
+                        <th>{{day.Position}}</th>
+                        <td>{{day.Date}}</td>
+                        <td>{{day.Budget}} $</td>
+                        <td><a href="javascript:void(0)" ng-click="onEditDay(day.Id)" >Edit</a> | <a href="javascript:void(0)" ng-click="onDeleteDay(day.Id)">Delete</a></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
