Liste des voyages (home)
Ajout de la page affichant la liste des voyages de l'utilisateur
courrant.

--- a/ProjetAirBermudes/AirBermudesClientAngular/mapService/testmaps.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/mapService/testmaps.html
@@ -1,7 +1,7 @@
 ﻿
 <div ng-controller="TestPlacesController">
 
-    <h2>Test places</h2>
+    <h2>↓↓↓ Test maps service below ↓↓↓</h2>
 
     <div id="map" style="height: 500px;">
     </div>
