--- a/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
@@ -16,7 +16,10 @@
         </div>
         <div class="navbar-collapse collapse" id="nav-collapse-section">
             <ul class="nav navbar-nav">
-                <li><a href="#/testplaces">Test places</a></li>
+                <li><a href="#/travels">Travels</a></li>
+                <li><a href="#/courses">Courses</a></li>
+                <li><a href="#/days">Days</a></li>
+                <li><a href="#/testmaps">Test maps</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="isAuthenticated()"><p class="navbar-text">{{getCurrentUserName()}}</p></li>
