--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -21,8 +21,9 @@
     <script type="text/javascript" src="travels/travel.js"></script>
     <script type="text/javascript" src="courses/courses.js"></script>
     <script type="text/javascript" src="days/days.js"></script>
-    <script type="text/javascript" src="places/places.js"></script>
+    <script type="text/javascript" src="mapService/mapService.js"></script>
     <script type="text/javascript" src="header/header.js"></script>
+    <script type="text/javascript" src="travelsMarc/travels.js"></script>
 
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
