--- a/ProjetAirBermudes/AirBermudesClientAngular/days/editDay.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/days/editDay.html
@@ -12,7 +12,7 @@
                     <form>
                         <div class="form-group">
                             <label class="label label-primary" for="email">Date</label>
-                            <input type="text" class="form-control" datetime="yyyy-MM-dd" id="date" ng-model="currentDay.Date">
+                            <input type="date" class="form-control" datetime="yyyy-MM-dd" id="date" ng-model="currentDay.Date">
                         </div>
                         <div class="form-group">
                             <label class="label label-primary" for="budget">Budget</label>
