Update packages de la solution + ...
Started destination on AJS and API,  create works.

--- a/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/courses/addCourse.html
@@ -19,7 +19,7 @@
                         <div ng-class="{'has-error' : hasErrors}">
 
                             <label for="StartDate">StartDate</label>
-                            <input type="text" name="StartDate" class="form-control" ng-model="StartDate" />
+                            <input type="date" datetime="yyyy-MM-dd" name="StartDate" class="form-control" ng-model="StartDate" />
 
                             <label for="DepartureAdress">Departure address</label>
                             <input type="text" name="DepartureAdress" class="form-control" ng-model="DepartureAddress" />
@@ -28,7 +28,7 @@
                             <input type="text" name="DestinationAddress" class="form-control" ng-model="DestinationAddress" />
 
                             <label for="EndDate">EndDate</label>
-                            <input type="text" name="EndDate" class="form-control" ng-model="EndDate" />
+                            <input type="date" datetime="yyyy-MM-dd" name="EndDate" class="form-control" ng-model="EndDate" />
 
                             <label for="TransportCompanyName">TransportCompanyName</label>
                             <input type="text" name="TransportCompanyName" class="form-control" ng-model="TransportCompanyName" />
