--- a/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="javascript:void(0)">
-            <span class="glyphicon glyphicon-plane"></span> 
+            <span class="glyphicon glyphicon-plane"></span>
                 Air Bermudes
             </a>
         </div>
@@ -20,6 +20,7 @@
                 <li><a href="#/travelsmarc">TravelsMarc</a></li>
                 <li><a href="#/courses">Courses</a></li>
                 <li><a href="#/days">Days</a></li>
+                <li><a href="#/destinations">Destinations</a></li>
                 <li><a href="#/testmaps">Test maps</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
