--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="mapService/mapService.js"></script>
     <script type="text/javascript" src="header/header.js"></script>
     <script type="text/javascript" src="travelsMarc/travels.js"></script>
+    <script type="text/javascript" src="destinations/destinations.js"></script>
 
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
