Interface de création d'un voyage

--- a/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
@@ -1,4 +1,6 @@
 ﻿
+{{travel}}
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title" style="line-height: 34px;">
