--- a/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travels.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travels.html
@@ -1,4 +1,11 @@
 ﻿
+<create-travel></create-travel>
+
+<a href="javascript:void(0)" class="addButton" data-toggle="modal" data-target="#new-travel-modal">
+    <span class="glyphicon glyphicon-plus"></span>
+    <p>New</p>
+</a>
+
 <div ng-repeat="travel in Travels">
 
     <travel-min-details travel="travel"></travel-min-details>
